# litter-detection

./: .gitignore  CLAUDE.md  README.md  analysis.ipynb  dataset.yaml  mlflow.db  prepare.py  program.md  pyproject.toml  student_task.md  train.py  training_diagram.excalidraw
auto-research/: findings.md  prepare.py  prepare_yolo.py  program.md  results.md  train.py  train_yolo.py
docker/: docker-compose.yml
docker/grafana/dashboards/: litter-detection.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docs/: explainer.md  student_task.md
prompts/: agent-setup.md  ar-backbone-copypaste-aug  ar-backbone-copypaste-aug.md  camera-config.md  camera-publisher.md  detector.md  epoch-metric.md  folder-structure.md  model-loading  model-loading.md  prompts.md
scripts/: export_onnx.py  fix-abs-path.py
src/litter_detector/: config.py  telemetry.py
src/litter_detector/agents/: config.py  main.py  mission.py  models.py  planner.py  tracing.py
src/litter_detector/agents/nbv/: candidates.py  clusters.py  fov.py  geometry.py  scoring.py  seen_mask.py  visualize.py
src/litter_detector/agents/tools/: nav.py  occupancy.py  pose.py
src/litter_detector/camera/: camera_source.py  go2_source.py  main.py  metrics.py  webcam_source.py
src/litter_detector/detector/: main.py  metrics.py  model.py
tests/agents/: test_geometry.py  test_mission.py  test_models.py  test_nav.py  test_nbv_core.py  test_occupancy.py  test_planner.py  test_pose.py  test_visualize.py
